--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,6 +1,8 @@
 #summary Frequently Asked Questions.
 <wiki:toc max_depth="3" />
 
+----
+
 =Questions, Suggestions & Bug Reports=
 
 There are 3 ways you can receive support for the plugin, Submitting log files and or Screenshots is recommended
@@ -87,21 +89,21 @@ If you have a series which has been rebooted, lets take Battlestar Galatica for 
  * Battlestar Galactica (1980) - S01E01.avi  this will match as the 1980's Series
  * Battlestar Galactica (2003) - S01E01.avi  this will match as the 2003 version.
 
-If a series was already imported incorrectly in Mediaportal, press F9 or Info on remote, then press 'Force new online lookup for series'.
+If a series was already imported incorrectly in Mediaportal, highlight the series, press F9 or Info on remote, then press 'Force new online lookup for series'.
 This will prompt you to select a series or manually enter a search term.
 
  ==Single File - Double Episode==
-MP-TVSeries can support 2 episodes in a single file. More than 2 is currently not supported
+MP-TVSeries can support 2 episodes in a single file. More than 2 is not currently supported
 
 See examples below
 
  * Alias.1x01.1x02.avi
  * Alias S01E01-E02.avi 
  * Alias S01E01 + S01E02.avi
- * Alias - s01e01 - s01e02 - bar
+ * Alias - s01e01 - s01e02.mkv
  * Alias #1.01 + #1.02.avi
 
-If you start playback on 1x01 from "Alias - S01E01-E02.avi", then both episodes will be played, and the end result is that 1x01 and 1x02 will be marked as watched. You can still start playback on 1x02, but it will start at the beginning of the file (but this is what one would expect anyway). If you start 1x01, but stop at the halfway point where 1x02 begins, then both 1x01+02 show as unwatched and when you try to restart playback you will get the "resume from" dialog
+If you start playback on 1x01 from "Alias - S01E01-E02.avi", then both episodes will be played, the end result is both episode 1 and 2 will be marked as watched. You can still start playback on 1x02, but it will start at the beginning of the file (but this is what one would expect anyway). If you start 1x01, but stop at the halfway point where 1x02 begins, then both 1x01+02 show as unwatched and when you try to restart playback you will get the "resume from" dialog
 
  ==Single Episode over Multiple Files==
 MP-TVSeries is not currently able to combine multiple files into 1 episode, It will show those files as duplicates in the episode list
