--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -164,7 +164,7 @@ The following are the locations of the files and folders used by MP-TVSeries, sh
 
  ==Solution==
  * Export your watch flags from the MP-TVSeries plugin configuration     
- * Delete your database TVSeriesDatabase4.db3 file 
+ * Delete your database file [http://code.google.com/p/mptvseries/wiki/FAQ?ts=1301645826&updated=FAQ#TVSeriesDatabase4.db3 TVSeriesDatabase4.db3]  
  * TVSeriesDatabase4.db3 will be re-created next time mediportal or the MP-TVSeries plugin configuration executes
  * Reimport your shows
  * Import your watch flags after import is complete
