--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -132,7 +132,7 @@ MP-TVSeries has options to change the episode ordering for a series, you will on
  This is the default option, shows will be ordered by the date they were aired
 
  ==DVD Order==
- Choose this option to have your episodes listed in the order they were released on DVD
+ Choose this option to have your episodes listed in the order they were released on DVD, DVD ordering if often used to correct minor, sometimes major changes in episode ordering that was initially aired on TV
 
  ==Title==
  This matches episode by title.  Example. firefly - 1x01 - Serenity.mkv
@@ -140,7 +140,7 @@ In this case will be parsed as 'Serenity' and will attempt to find an online mat
 This may be useful for specials which keep on getting re-ordered online.
 
  ==Absolute Order==
- Some series, especially Anime dont break a Series into seasons and go from episode 1 to whatever the final episode is, often into the hundreds. Most western broadcasters however do break these shows into seasons, so in order to accommodate this alternate numbering scheme an additional field Absolute Number is available. 
+ This option can only be selected on a Series, not a Season. Some series, like Anime may not be broken in Seasons. In order to accommodate this alternate numbering scheme an additional field Absolute Number is available. 
 
  ==Changing Matching Method==
  You can initially select these options on your inital import, see here, or you can change it inside Mediaportal
