--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -136,13 +136,13 @@ MP-TVSeries has options to change the episode ordering for a series, you will on
 
  ==Title==
  This matches episode by title.  Example. firefly - 1x01 - Serenity.mkv In this case will be parsed as 'Serenity' and will attempt to find an online match with episodes that have that title.
-This may be useful for specials which keep on getting re-ordered online.
+ This may be useful for specials which keep on getting re-ordered online.
 
  ==Absolute Order==
  This option can only be selected on a Series, not a Season. Some series, like Anime may not be broken in Seasons. In order to accommodate this Absolute Order can be used
 
  ==Changing Matching Method==
- You can initially select these options on your inital import, see here, or you can change it inside Mediaportal
+ You can initially select these options on your [http://code.google.com/p/mptvseries/wiki/GettingStarted?ts=1301693772&updated=GettingStarted#Initial_Configuration inital import],or you can change it inside Mediaportal
  * In Mediaportal - Select the Series or Season
  * Press F9 on keyboard or INFO on MCE Remote
  * Choose ACTIONS
