--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -166,7 +166,7 @@ To download all the available information for your Series, including Episodes yo
  * Click OPTIONS
  * Change 'ONLY SHOW LOCAL EPISODES' to OFF
  
- You will now see all episodes for a Series, Depending on Skin, those episodes may show in a different colour, e.g. Orange in Bluw3Wide *& StreamedMP. If a Season only shows a partial amount of all the expected episodes, then those episodes havent been added yet on thetvdb.com. 
+ You will now see all episodes for a Series, Depending on Skin, those episodes may show in a different colour, e.g. Orange in Blue3Wide & StreamedMP. If a Season only shows a partial amount of all the expected episodes, then those episodes havent been added yet on thetvdb.com. 
 
 ----
 
@@ -208,7 +208,7 @@ The following are the locations of the files and folders used by MP-TVSeries, sh
  * Your just unlucky!
 
  ==Solution==
- * (Optional) To retain your watch flags, and your NOT synced with [http://code.google.com/p/mptvseries/wiki/FAQ#Follw.it follw.it] or [http://code.google.com/p/mptvseries/wiki/FAQ#Trakt.tv trakt.tv], _Export Watched Flags.._ from the MP-TVSeries plugin configuration, General Tab
+ * (Optional) To retain your watch flags, and your NOT currently synced with [http://code.google.com/p/mptvseries/wiki/FAQ#Follw.it follw.it] or [http://code.google.com/p/mptvseries/wiki/FAQ#Trakt.tv trakt.tv], _Export Watched Flags.._ from the MP-TVSeries plugin configuration, General Tab
  http://mptvseries.googlecode.com/svn/wiki/Images/ExportImportWatchFlags.jpg 
  * Delete your database file [http://code.google.com/p/mptvseries/wiki/FAQ?ts=1301645826&updated=FAQ#TVSeriesDatabase4.db3 TVSeriesDatabase4.db3]  
  * TVSeriesDatabase4.db3 will be re-created next time mediportal or the MP-TVSeries plugin configuration executes
