Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -160,7 +160,7 @@ To download all the available information for your Series, including Episodes yo
  * The next import may take a while as it downloads all the avaible information for all your imported Series
  http://mptvseries.googlecode.com/svn/wiki/Images/DownloadEpisodeInfoAll.jpg
 
- ==Showing / Hiding==
+ ==Show / Hide==
  * in Mediaporal, MP-TVSeries Plugin
  * Press F9 on keyboard or INFO on MCE Remote
  * Click OPTIONS
