Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -250,10 +250,10 @@ Its sometimes reported that the database file TVSeriesDatabase4.db3 has become d
 There are 2 options, restore from a backup file, or start clean
 
   ===Option 1 - Restore from Backup File===
-  If you installed MP-TVSeries from the installer, it would have made a backup database in the following locations. You could take the backup file from this location and overwrite the corrupt [http://code.google.com/p/mptvseries/wiki/FAQ#TVSeriesDatabase4.db3 TVSeriesDatabase4.db3]
+  If you installed MP-TVSeries from the installer, it would have made a backup database in the following location. You could take the backup file from this location and overwrite the corrupt [http://code.google.com/p/mptvseries/wiki/FAQ#TVSeriesDatabase4.db3 TVSeriesDatabase4.db3]. If the backups are extremely old, it may be wiser to use Option 2
 
-  * *XP*  C:\Documents and Settings\All Users\Application Data\Team MediaPortal\MediaPortal\database\TVSeries_Backup
-  * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\MediaPortal\database\TVSeries_Backup
+  * *XP*  C:\Documents and Settings\All Users\Application Data\Team MediaPortal\MediaPortal\database\TVSeries_Backup\<date>
+  * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\MediaPortal\database\TVSeries_Backup\<date>
 
 
   ===Option 2 - New Database===
