Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -193,6 +193,11 @@ The following are the locations of the files and folders used by MP-TVSeries, sh
   * *XP*  C:\Documents and Settings\All Users\Application Data\Team MediaPortal\MediaPortal\log
   * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\MediaPortal\log
 
+ ==Language.XML (Files)==
+ This directory contains all the translated languages that can be used in MP-TVSeries
+  * *XP*  C:\Documents and Settings\All Users\Application Data\Team MediaPortal\Mediaportal\language\MP-TVSeries\
+  * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\Mediaportal\language\MP-TVSeries\
+
 ----
 
 =Multiple HTPCs and MP-TVSeries=
