--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -255,7 +255,7 @@ MP-TVSeries supports multiple languages, and you are welcome to contribute by up
 
 =Edit Database=
 
- If you need to edit the MP-TVSeries database directly,you can download a SQLite tool, such as [http://sqlitebrowser.sourceforge.net/development.html sqlitebrowser] and edit the [http://code.google.com/p/mptvseries/wiki/FAQ#TVSeriesDatabase4.db3 TVSeriesDatabase4.db3] file.
+ If you need to edit the MP-TVSeries database directly,you can download a SQLite tool, such as [http://sqlitebrowser.sourceforge.net/development.html sqlitebrowser] and open the [http://code.google.com/p/mptvseries/wiki/FAQ#TVSeriesDatabase4.db3 TVSeriesDatabase4.db3] file.
 
 ----
 =Database Corruption=
