--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -11,7 +11,7 @@ There are 3 ways you can receive support for the plugin, Submitting log files an
  MP-TVSeries has a dedicated [http://forum.team-mediaportal.com/my-tvseries-162/ sub-forum], try searching as you question may have been answered, if not please create a new thread
 
  ==Issue Tracker==
- MP-TVSeries has a issue tracker [http://code.google.com/p/mptvseries/issues/list here]. Recommended if you have a re-producable bug or enhancement request 
+ MP-TVSeries has a issue tracker [http://code.google.com/p/mptvseries/issues/list here]. Recommended if you have a re-producible bug or enhancement request 
 
  ==IRC==
  Join the #mp-tvseries IRC channel on Freenode
@@ -51,7 +51,7 @@ You can use either or both of the sites at the same time.
 
 ==Trakt.tv==
 
- * From version 2.8.1+, the Trakt.tv supprt will be moved to its own process plugin called [http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-2-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
+ * From version 2.8.1+, the Trakt.tv support will be moved to its own process plugin called [http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-3-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
 
 
    ===Configuration===
@@ -218,18 +218,18 @@ Mediaportal 1 does not have native support for sharing its databases across mult
 
  * Close Mediaporal
  * From the main HTPC, copy its [http://code.google.com/p/mptvseries/wiki/FAQ#TVSeriesDatabase4.db3 TVSeriesDatabase4.db3] to your additional HTPCs, overwriting.
- * From the main HTPC, copy its [http://code.google.com/p/mptvseries/wiki/FAQ#MPTVSeriesBanners_and_Fan_Art_(Folders) MPTVSeriesBanners and Fan Art (Folders)] to your additional HTPCs, overwriting. Note you could just copy the entire thumbs folder (recommened), especially if you are doing the same process with MovingPictures etc.
+ * From the main HTPC, copy its [http://code.google.com/p/mptvseries/wiki/FAQ#MPTVSeriesBanners_and_Fan_Art_(Folders) MPTVSeriesBanners and Fan Art (Folders)] to your additional HTPCs, overwriting. Note you could just copy the entire thumbs folder (recommend), especially if you are doing the same process with MovingPictures etc.
  * Open Mediaportal and you should have a working MP-TVSeries. When a show is watched on 1 HTPC it will be replicated to the others when it next syncs with Follw.it or Trakt.tv
 
- ===Pros over Multiseat===
+ ===Advantages===
 
  * You can use all HTPCs at the same time
  * No greater risk of Database Corruption
 
- ===Cons over Multiseat===
+ ===Disadvantages===
 
  * Every new episode added after you copied the database/thumbs will be imported on every additional HTPC, so this will use additional internet traffic
- * Changes you make on one HTPC, e.g. disabling fanart, changing views, adding/removing favourites are not replicaed to the other HTPCs. (Until you copy the database again)
+ * Changes you make on one HTPC, e.g. disabling fanart, changing views, adding/removing favourites are not replicated to the other HTPCs. (Until you copy the database again)
 
 ----
 
@@ -243,7 +243,7 @@ MP-TVSeries supports multiple languages, and you are welcome to contribute by up
  * Close MediaPortal
 
  ==Update a Language==
- If you find a language has incorrect spelling, or missing some translation fields, you can update the appropiate .xml file in the [http://code.google.com/p/mptvseries/wiki/FAQ#Language.XML_(Files) Language Folder]. Please submit the updated file on the [http://forum.team-mediaportal.com/my-tvseries-162/ forum]
+ If you find a language has incorrect spelling, or missing some translation fields, you can update the appropriate .xml file in the [http://code.google.com/p/mptvseries/wiki/FAQ#Language.XML_(Files) Language Folder]. Please submit the updated file on the [http://forum.team-mediaportal.com/my-tvseries-162/ forum]
 
  ==Add a new Language==
  * Download the latest English XML [http://mptvseries.googlecode.com/svn/trunk/MP-TVSeries/Resources/Languages/en(us).xml here]
